; ModuleID = '/home/carl/AnghaBench/poco/JSON/src/extr_pdjson.c_buffer_get.c'
source_filename = "/home/carl/AnghaBench/poco/JSON/src/extr_pdjson.c_buffer_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.json_source = type { {}*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.json_source*)* @buffer_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @buffer_get(%struct.json_source* %0) #0 {
  %2 = alloca %struct.json_source*, align 8
  %3 = alloca i32, align 4
  store %struct.json_source* %0, %struct.json_source** %2, align 8
  %4 = load %struct.json_source*, %struct.json_source** %2, align 8
  %5 = getelementptr inbounds %struct.json_source, %struct.json_source* %4, i32 0, i32 0
  %6 = bitcast {}** %5 to i32 (%struct.json_source*)**
  %7 = load i32 (%struct.json_source*)*, i32 (%struct.json_source*)** %6, align 8
  %8 = load %struct.json_source*, %struct.json_source** %2, align 8
  %9 = call i32 %7(%struct.json_source* %8)
  store i32 %9, i32* %3, align 4
  %10 = load %struct.json_source*, %struct.json_source** %2, align 8
  %11 = getelementptr inbounds %struct.json_source, %struct.json_source* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %11, align 8
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
